jdk/src/solaris/classes/sun/awt/X11/XWindowPeer.java
@@ -2058,7 +2058,7 @@ class XWindowPeer extends XPanelPeer implements WindowPeer,
     }
 
     @Override
-    public void updateWindow(BufferedImage backBuffer) {
+    public void updateWindow() {
         // no-op
     }
 }
